--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,13 +21,9 @@ jobs:
       - name: Install Dependency       
         run: |
           npm install      
-
-      - name: Ngork       
-        run: |
-          ./natapp -authtoken=0083ee88dbe7d7fa          
-          
+            
       - name: Run Node Script    
         run: |
-          node ./mynode.js  # 
+          node ./mynode.js  
 
       
