--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,5 +26,5 @@ jobs:
           
       - name: Natapp       
         run: |
-          ./natapp -h
+          ./natapp -log=stdout -authtoken=0083ee88dbe7d7fa
       
