--- a/.github/workflows/ngork.yml
+++ b/.github/workflows/ngork.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     name: node-wechat
     steps:
+      
+      - name: checkout
+        uses: actions/checkout@master  
+        
       - name: Chmod       
         run: |
           chmod a+x natapp
