--- a/.github/workflows/ngork.yml
+++ b/.github/workflows/ngork.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Natapp       
         run: |
           ./natapp -h 
-          ./natapp -log=stdout -authtoken=0083ee88dbe7d7fa 
+          ./natapp -log=stdout
           
 
 
