--- a/.github/workflows/ngork.yml
+++ b/.github/workflows/ngork.yml
@@ -17,6 +17,7 @@ jobs:
           
       - name: Natapp       
         run: |
+          ./natapp
           ./natapp -h 
           ./natapp -log=stdout
           
