--- a/.github/workflows/ngork.yml
+++ b/.github/workflows/ngork.yml
@@ -17,7 +17,7 @@ jobs:
           
       - name: Natapp       
         run: |
-          ./natapp
+          ./natapp -authtoken=0083ee88dbe7d7fa 
           ./natapp -h 
           ./natapp -log=stdout
           
