--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
     runs-on: ubuntu-latest
     name: node-wechat2
     steps:
+      - name: checkout
+        uses: actions/checkout@master  
             
       - name: Chmod       
         run: |
