--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,29 +23,16 @@ jobs:
       - name: Ip
         run: |
          curl cip.cc
-
-         
-      - name: Run Node Script    
-        run: |
-         node ./mynode.js
-         
-  send_message2: 
-    runs-on: ubuntu-latest
-    name: node-wechat2
-    steps:
-      - name: checkout
-        uses: actions/checkout@master  
-        
-      - name: Ip
-        run: |
-         curl cip.cc      
-            
+         ipconfig
+     
       - name: Chmod       
         run: |
          chmod a+x sunny
          
-           
-      - name: Chmod       
+      - name: Run Node Script    
         run: |
-         ./sunny clientid 113212373883
+         setsid ./sunny clientid 隧道id &
+         node ./mynode.js
+         
+
       
