--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "4.17.1",
+    "serve": "^14.0.1",
     "wechat-api": "^1.35.1"
   }
 }
