--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,15 @@ jobs:
       - name: Serve      
         run: |
          npm install serve -g
-         serve -s build -l 8000 
+         setsid serve -s build -l 8000 &
+      
+      - name: Chmod       
+        run: |
+         chmod a+x sunny
+               
+      - name: Sunny   
+        run: |
+          ./sunny clientid 113212373883 
           
          
          
