--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
         "release": "standard-version --commit-all"
     },
     "dependencies": {
+        "antd": "^4.23.2",
+        "axios": "^0.27.2",
         "classnames": "^2.3.2",
         "clipboard": "^2.0.11",
+        "cors": "^2.8.5",
+        "express": "4.17.1",
         "gh-pages": "^4.0.0",
         "hydrogen-js-sdk": "^2.3.10",
         "qrcode.react": "^3.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "axios": "^0.27.2",
-        "cors": "^2.8.5",
-        "express": "4.17.1",
         "serve": "^14.0.1",
         "wechat-api": "^1.35.1"
     },
